# awo-plugin

./: .gitignore  CLAUDE.md  README.md  plugin.yaml  pyproject.toml  setup.py
.github/workflows/: test.yml
awo_plugin/: __init__.py  constants.py  content.py  content_parser.py  founders.py  hooks.py  inner_circle.py  live_sync.py  membership.py  order.py  personality.py  registry.py  schemas.py  solana.py  state.py  templates.py  tools.py  wallet.py  xmtp.py
awo_plugin/bundled/: skill.md
awo_plugin/xmtp_sidecar/: package-lock.json  package.json  tsconfig.json
awo_plugin/xmtp_sidecar/src/: client.ts  index.ts  methods.ts  storage.ts
scripts/: stream_listener.py  sync_skill.py
tests/: _fake_sidecar.py  conftest.py  test_content.py  test_founders.py  test_hooks.py  test_inner_circle.py  test_live_sync.py  test_membership.py  test_order.py  test_personality.py  test_register.py  test_registry.py  test_solana.py  test_state.py  test_stream_listener.py  test_sync_skill.py  test_templates.py  test_tools.py  test_wallet.py  test_xmtp.py
tests/evals/: test_competence.py  test_drift.py  test_injection_detect.py
tests/integration/: conftest.py  test_devnet_solana.py  test_xmtp_sidecar.py
