[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awo-plugin"
version = "0.1.1"
description = "Agentic World Order — Hermes plugin. Voice injection, personality modes, local membership."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AWO Labs" }]
keywords = ["hermes", "agent", "awo", "plugin"]
dependencies = [
    "requests>=2.31",
    "solders>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.entry-points."hermes_agent.plugins"]
awo = "awo_plugin:register"

[tool.setuptools.packages.find]
include = ["awo_plugin*"]

[tool.setuptools.package-data]
awo_plugin = [
    "bundled/*.md",
    "xmtp_sidecar/package.json",
    "xmtp_sidecar/package-lock.json",
    "xmtp_sidecar/tsconfig.json",
    "xmtp_sidecar/src/*.ts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
